# deepstream-services-library

./: .gitignore  CMakeLists.txt  Makefile  dsl.py  file-action.txt  pyds-1.1.1-py3-none-linux_x86_64.whl
.codelite/: deepstream-services-library.project
examples/cpp/: 1file_preproc_pgie_iou_osd_window.cpp  1file_preproc_pgie_iou_osd_window_fakesink.cpp  1file_preproc_pgie_iou_osd_window_ma.cpp  1file_preproc_pgie_iou_osd_window_nmm.cpp  1file_rcnn_preproc_pgie_iou_osd_window_nmm.cpp  1file_yolov3_preproc_pgie_iou_osd_window_nmm.cpp  1file_yolov5_preproc_pgie_iou_osd_window.cpp  1file_yolov5_preproc_pgie_iou_osd_window_nmm.cpp  1file_yolov5_preproc_pgie_iou_osd_window_nmm_trk_debug.cpp  1file_yolov5_preproc_pgie_iou_osd_window_nmm_xtensor.cpp  1file_yolov5_preproc_pgie_iou_osd_window_nms.cpp  2file_yolov5_preproc_nmm_compare.cpp  2file_yolov5_preproc_pgie_iou_osd_window_nmm.cpp  4file_yolov5_preproc_pgie_iou_osd_window_nmm.cpp  4file_yolov5_preproc_pgie_iou_osd_window_nmm_trk_debug.cpp  4uri_file_streammux_with_tiled_output_pre_pgie.cpp  4uri_file_tiler_show_source_control.cpp  CMakeLists.txt  Makefile  NAS_DGPU.cpp  cmd.cpp  deepsort_person_track_test.cpp  interpipe_multiple_pipelines_listening_to_single_sink.cpp  interpipe_preproc_error.cpp  interpipe_single_pipeline_dynamic_switching_between_multiple_sinks.cpp  labels.txt  log.txt  log_fail_reconnection.txt  log_success.txt  log_success_reconnection.txt  nas.cpp  nas.ini  nas_ami.h  nas_dgpu.cpp  nas_dgpu_interpipe_test.yml  nas_labels.txt  nas_rtsp_connection.cpp  non_maximum_merge.cpp  non_maximum_suppression.cpp  option.ini  (+6 more)
examples/cpp/pph/: nmm.cpp
examples/cpp/yaml/: CMakeLists.txt  Makefile
examples/python/: CREATE_MOTC_FROM_VIDEO.ipynb  CREATE_NMP_RESULT_COCO_JSON.ipynb  CREATE_NMP_RESULT_COCO_JSON.py  CREATE_NMP_RESULT_IMAGE_NEW.ipynb  CREATE_NMP_RESULT_TO_CSV.ipynb  DEBUG_PREPROC_YOLOV3.ipynb  DEBUG_RTSP_BANDWIDTH.ipynb  MULTI_STREAM_IMAGE_NMP.ipynb  TRACKER_TEST.ipynb  eval.json  multi_stream_image_nmp.py  nvidia_osd_sink_pad_buffer_probe.py  result_slice_pred.json
examples/python/.ipynb_checkpoints/: CREATE_NMP_RESULT_COCO_JSON-checkpoint.ipynb  MULTI_STREAM_IMAGE_NMP-checkpoint.ipynb
src/: CMakeLists.txt  DslOdeAction.cpp  DslSourceBintr.cpp
src/nmp/: CMakeLists.txt  DslPadProbeHandlerNmp.cpp
src/nms/: CMakeLists.txt
test/configs/: config_infer_primary_nano_nms_test.txt
