ADD_DEFINITIONS(-DNUMCPP_NO_USE_BOOST)

## LIB Thirdparty All Source Files
FILE(GLOB SOURCES_FILES CONFIGURE_DEPENDS
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)

### make SHARED library (.so) / STATIC(.a) ###
ADD_LIBRARY(nmp SHARED ${SOURCES_FILES})


### INCLUDE DIRECTORY ###
TARGET_INCLUDE_DIRECTORIES(nmp PUBLIC .)

#TARGET_LINK_LIBRARIES(nms
#	dsl
#)

### INSTALL TARGETS ###
INSTALL(TARGETS nmp
    DESTINATION ${CMAKE_LIB_PATH}
)
