
## LIB Thirdparty All Source Files
FILE(GLOB SOURCES_FILES CONFIGURE_DEPENDS
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)


### make SHARED library (.so) / STATIC(.a) ###
ADD_LIBRARY(nms SHARED ${SOURCES_FILES})


### INCLUDE DIRECTORY ###
TARGET_INCLUDE_DIRECTORIES(nms PUBLIC .)

#TARGET_LINK_LIBRARIES(nms
#	dsl
#)

### INSTALL TARGETS ###
INSTALL(TARGETS nms
    DESTINATION ${CMAKE_LIB_PATH}
)
